--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.2"
   }
 }
